--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/gerenciamento
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=user
+spring.datasource.url=
+spring.jpa.hibernate.ddl-auto=
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
